# CNC-Cooling-Unit

./: README.md
binary/: lcd_1602_i2c.uf2
hardware/: CNC-cooling-unit.dxf  part_list.txt
schematics/: schematics_readme.txt
software/: CMakeLists.txt  lcd_1602_i2c.c
